# Ajax-composite

./: .gitignore  Makefile  README.md  pyproject.toml
artifacts/: bestsofar.json  diag10_feedback_2x2.json  diag11_conditional_recovery.json  diag1_oracle_stratification.json  diag2_register_probes.json  diag3_control_authority.json  diag4_item3_entropy_split.json  diag4_objective_units.json  diag5_transfer.json  diag7_oracle_coverage.json  diag7b_mcnemar.json  diag8_anchoring.json  diag9_error_persistence.json  diag9b_persistence_baseline.json  dmeasure_conditioning.json  dmeasure_d2a_verb_provenance.json  dmeasure_d2c_partial_credit.json  dmeasure_e7.json  dmeasure_subset_control.json  h0a_ast_distance.json  h0a_d2a_ast_followup.json  h1_cross_family.json  h1_result.json  h1_smoke_deepseek.json  h1_smoke_starcoder2.json  h1_v2b_result.json  h2_b2_result.json  h2_hints_frozen.json  h2_manip_check.json  h2_manip_check_deepseek.json  h2_result.json  h2a_hint_arm.json  h2a_rerun_stability.json  h2a_validation_struct.json  h2b_near_miss.json  h5_7b_floor_fit.json  h5_7b_hard_floor_fit.json  h5_7b_hard_screen.json  h5_7b_medium_screen.json  h5_7b_pathology.json  (+79 more)
configs/: base.toml  phase0_harness.toml  phase1_verifier.toml  phase2_register.toml  phase3_adaptive.toml
docs/: ARCHITECTURE.md  COMPUTE_ACCOUNTING.md  DECISIONS.md  DIAGNOSTICS.md  METRICS.md  PHASE2-PLAN.md  PHASES.md  PHASE_3.md  PHASE_3B.md  PHASE_3R.md  PHASE_4.md  PHASE_5.md  PHASE_6.md  PHASE_7.md  PHASE_8.md  PHASE_9.md  PHASE_K.md  PHASE_M.md  PRE-B2-HANDOFF.md  WRITEUP-rgr.md  WRITEUP.md  build-brief.md
(+97 files in other folders)
